修复一些bug